	- GM will now check to see if it's data files have been changed at each scheduled save.
	  If the files have been altered (on disc) it will reload, so long as the in-memory data hasn't changed.
	  If the files on Disc have changed AND there have been changes to it's in-memory data it will show a warning.
	  You then MUST issue a '/mansave force' to overwrite the disc files, or a '/manload' to overwrite the memory data.
	- Fix for an error in checkFullUserPermission caused by players disconnecting mid perms update.
	- Notification of being moved to the default group only happens if it's a demotion/promotion (not on join).
	- Fixed GM holding files open and causing the time stamp to be incorrect. This caused GM to require a '/mansave force' when it shouldn't be needed.
	- Fixed a crash on reload due to bukkit not unloading plugins before reloading.
v 1.6:
	- Prevent Group.equals tests throwing a NullPointerException for GlobalGroups.
	- Stop throwing errors on an empty users file.
	- Optimize sorting to speedup permission tests.
	- Fix superperms to pass all tests http://dev.bukkit.org/server-mods/superpermstest/
	- Optimizations include changing the return of comparePermissionString.
	- Added file details in error messages for loading groups/users.
v 1.7:
	- GM now supports offline players without having to mantogglevalidate
	- Offline player checks now support partial name matches.
	- Added custom events so plugins can now be notified of changes within GroupManager.
	- GM now registers with Bukkits ServicesManager.
	- deleting the contents of GlobalGroups.yml will no longer thrown a NullPointerException.
	- Removed op permissions from admins in the default GloblaGroups.yml.
v 1.8:
	- Changed ServicesManager registration to lowest from normal.
	- Fixed 'manucheckp' returning a null for the searched node when it's a group/subgroup.
	- manpromote and mandemote now correctly send the notification to the console if the command was issued there.